[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/debug/DirectorLensOverlay.gd" id="1_1"]

[node name="DirectorLensOverlay" type="CanvasLayer"]
layer = 128
script = ExtResource("1_1")

[node name="MainPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="DataContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/DataContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "--- DIRECTOR'S LENS ---"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/MarginContainer/DataContainer"]
layout_mode = 2

[node name="HeatingLabel" type="Label" parent="MainPanel/MarginContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Heating: ..."

[node name="VerdictLabel" type="Label" parent="MainPanel/MarginContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Verdict: ..."

[node name="FoodDemandLabel" type="Label" parent="MainPanel/MarginContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Food Demand: ..."

[node name="WoodDemandLabel" type="Label" parent="MainPanel/MarginContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wood Demand: ..."
